Readme cleanup now that Java isn't installed by default